# stagehand-rust

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
examples/: basic.rs  chromiumoxide_page_example.rs
proto/: stagehand.v1.proto
src/: lib.rs  main.rs
tests/: browserbase_live.rs  chromiumoxide_integration.rs
