[package]
name = "stagehand-sdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "tokio-stream"]
async-std-runtime = ["async-std"]

[dependencies]
# Runtime-agnostic
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3.31"
async-channel = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
eventsource-client = "0.15.1"
dotenvy = "0.15"
async-trait = "0.1.89"

# Tokio runtime (optional, default)
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread"], optional = true }
tokio-stream = { version = "0.1", optional = true }

# Async-std runtime (optional)
async-std = { version = "1", features = ["attributes"], optional = true }

[dev-dependencies]
chromiumoxide = { version = "0.8.0", features = ["tokio-runtime"] }
# TLS support for WSS connections to Browserbase
async-tungstenite = { version = "*", features = ["tokio-native-tls", "tokio-runtime"] }
