[package]
name = "stagehand_sdk"
version = "0.4.0"
edition = "2024"
description = "Rust SDK for Stagehand - AI-powered browser automation with Browserbase"
license = "Apache-2.0"
repository = "https://github.com/browserbase/stagehand-rust"
keywords = ["browser", "automation", "ai", "browserbase", "stagehand"]
categories = ["web-programming", "api-bindings"]
readme = "README.md"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "tokio-stream"]
async-std-runtime = ["async-std"]
chromiumoxide-page = ["chromiumoxide"]

[dependencies]
# Runtime-agnostic
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3.31"
async-channel = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
eventsource-client = "0.15.1"
dotenvy = "0.15"
async-trait = "0.1.89"
chromiumoxide = { version = "0.8.0", features = ["tokio-runtime"], optional = true }

# Tokio runtime (optional, default)
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread"], optional = true }
tokio-stream = { version = "0.1", optional = true }

# Async-std runtime (optional)
async-std = { version = "1", features = ["attributes"], optional = true }

[dev-dependencies]
# TLS support for WSS connections to Browserbase
async-tungstenite = { version = "0.32", features = ["tokio-native-tls", "tokio-runtime"] }

[[example]]
name = "chromiumoxide_page_example"
path = "examples/chromiumoxide_page_example.rs"
required-features = ["chromiumoxide-page"]

[[test]]
name = "chromiumoxide_integration"
path = "tests/chromiumoxide_integration.rs"
required-features = ["chromiumoxide-page"]
